python-debian (0.1.22) UNRELEASED; urgency=low

  * Acknowledge NMU.  (Thanks for your work, Colin!)
  * arfile.ArFile.extractfile: Return a matching member even if it is
    not the first one in the archive.  Thanks to Mika Eloranta for the
    report and patch. (Closes: #689313)

 -- John Wright <jsw@debian.org>  Mon, 08 Oct 2012 00:41:32 -0700

python-debian (0.1.21+nmu2) unstable; urgency=low

  * Non-maintainer upload.
  * In Python 2, restore Deb822Dict.has_key method for compatibility.
    (Closes: #686731)

 -- Colin Watson <cjwatson@debian.org>  Wed, 05 Sep 2012 11:28:58 +0100

python-debian (0.1.21+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Port to Python 3. (Closes: #625509)

 -- Colin Watson <cjwatson@debian.org>  Wed, 22 Aug 2012 16:27:05 +0100

python-debian (0.1.21) unstable; urgency=low

  [ Tshepang Lekhonkhobe ]
  * test_changelog.py: Close open files. (Closes: #625672)

  [ John Wright ]
  * deb822: Allow ':' as the first character of a value.
    (Closes: #597249)
  * deb822: Avoid dumping unparseable data. (Closes: #597120)
  * Clean up deb822.GpgInfo implementation:
    - Change several @staticmethod decorated methods to @classmethod,
      since they call the class constructor.
    - from_sequence now can accept both sequences of newline-terminated
      strings and the output of str.splitlines().
    - from_file now actually calls the from_sequence method.
      (Closes: #627058)
    - from_sequence now makes a copy of the initial args list before
      extending it. (Closes: #627060)
    - Keyrings are no longer checked for accessibility, since gpgv can
      accept keyring arguments that are under the GnuPG home directory,
      regardless of the current directory. (Closes: #627063)
  * deb822.Deb822.gpg_info takes an optional keyrings argument.
  * deb822: Don't interpret lines starting with '#'. (Closes: #632306)

  [ Colin Watson ]
  * Use dh_python2 instead of python-support. (Closes: #631392)
