@@ -4,6 +4,8 @@ python-debian (0.1.22) UNRELEASED; urgency=low
   * arfile.ArFile.extractfile: Return a matching member even if it is
     not the first one in the archive.  Thanks to Mika Eloranta for the
     report and patch. (Closes: #689313)
+  * deb822.Deb822.iter_paragraphs: Actually work with string input.
+    Thanks to Stefano Rivera for the patch. (Closes: #647455)
 
  -- John Wright <jsw@debian.org>  Mon, 08 Oct 2012 00:41:32 -0700
 
